force-app/main/default/objects/Account/fields/Accounting_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>