force-app/main/default/objects/Account/fields/Accounting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>