force-app/main/default/objects/Account/fields/Base_Year__c.field-meta.xml
<CustomField>
    <fullName>Base_Year__c</fullName>
    <label>Base Year</label>
    <length>244</length>
    <type>Text</type>
</CustomField>