force-app/main/default/objects/Account/fields/BK_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>BK_Add_Ons__c</fullName>
    <label>BK Add-Ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional accounts to reconcile</fullName>
            </value>
            <value>
                <fullName>Transaction volume over maximum</fullName>
            </value>
            <value>
                <fullName>Inputting customer invoices, sending reminders</fullName>
            </value>
            <value>
                <fullName>Bill payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>