force-app/main/default/objects/Account/fields/BK_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BK_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BK Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (BK Opportunity)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>