force-app/main/default/objects/Account/fields/BK_Plan__c.field-meta.xml
<CustomField>
    <fullName>BK_Plan__c</fullName>
    <label>BK Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BK_Plans</valueSetName>
    </valueSet>
</CustomField>