force-app/main/default/objects/Account/fields/BK_Tool_Other__c.field-meta.xml
<CustomField>
    <fullName>BK_Tool_Other__c</fullName>
    <label>BK Tool Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>