force-app/main/default/objects/Account/fields/Business_Name_Federal__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Federal__c</fullName>
    <label>Business Name Federal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>