force-app/main/default/objects/Account/fields/Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner__c</fullName>
    <label>Business Partner?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>