force-app/main/default/objects/Account/fields/Churned_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Churned_Date_Stamp__c</fullName>
    <label>Churned Date Stamp</label>
    <type>DateTime</type>
</CustomField>