force-app/main/default/objects/Account/fields/City_of_Business__c.field-meta.xml
<CustomField>
    <fullName>City_of_Business__c</fullName>
    <label>City of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>