force-app/main/default/objects/Account/fields/Client_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Client_Date_Stamp__c</fullName>
    <label>Client Date Stamp</label>
    <type>DateTime</type>
</CustomField>