force-app/main/default/objects/Account/fields/Comingled_Finances__c.field-meta.xml
<CustomField>
    <fullName>Comingled_Finances__c</fullName>
    <label>Comingled Finances?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>