force-app/main/default/objects/Account/fields/Current_Bookkeeping_Software__c.field-meta.xml
<CustomField>
    <fullName>Current_Bookkeeping_Software__c</fullName>
    <label>Current Bookkeeping Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>