force-app/main/default/objects/Account/fields/Disqualified_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Date_Stamp__c</fullName>
    <label>Disqualified Date Stamp</label>
    <type>DateTime</type>
</CustomField>