force-app/main/default/objects/Account/fields/Dropbox_Folder__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Folder__c</fullName>
    <label>Dropbox Folder</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>