force-app/main/default/objects/Account/fields/Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>Entity_Number__c</fullName>
    <label>Entity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>