force-app/main/default/objects/Account/fields/Estimated_Tax_Savings__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tax_Savings__c</fullName>
    <label>Estimated Tax Savings</label>
    <length>50</length>
    <type>Text</type>
</CustomField>