force-app/main/default/objects/Account/fields/Expense_Separated__c.field-meta.xml
<CustomField>
    <fullName>Expense_Separated__c</fullName>
    <label>Expense Separated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>