force-app/main/default/objects/Account/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <label>Expenses</label>
    <length>244</length>
    <type>Text</type>
</CustomField>