force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <formula>Primary_Contact__r.Facebook__c</formula>
    <label>Facebook</label>
    <type>Text</type>
</CustomField>