force-app/main/default/objects/Account/fields/Foreign_Assets__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Assets__c</fullName>
    <label>Foreign Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>