force-app/main/default/objects/Account/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <label>Formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Prop</fullName>
            </value>
            <value>
                <fullName>SM-LLC</fullName>
            </value>
            <value>
                <fullName>MM-LLC</fullName>
            </value>
            <value>
                <fullName>C Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>