force-app/main/default/objects/Account/fields/Formation_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Formation_Date_Stamp__c</fullName>
    <label>Formation Date Stamp</label>
    <type>DateTime</type>
</CustomField>