force-app/main/default/objects/Account/fields/Has_Preparer__c.field-meta.xml
<CustomField>
    <fullName>Has_Preparer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Has Tax Preparer</label>
    <type>Checkbox</type>
</CustomField>