force-app/main/default/objects/Account/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <formula>Primary_Contact__r.Instagram__c</formula>
    <label>Instagram</label>
    <type>Text</type>
</CustomField>