force-app/main/default/objects/Account/fields/Latest_Tax_Year_Stored__c.field-meta.xml
<CustomField>
    <fullName>Latest_Tax_Year_Stored__c</fullName>
    <label>Latest Tax Year Stored</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>