force-app/main/default/objects/Account/fields/Legal_Issues__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issues__c</fullName>
    <label>Legal Issues</label>
    <type>TextArea</type>
</CustomField>