force-app/main/default/objects/Account/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <formula>Primary_Contact__r.LinkedIn__c</formula>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>