force-app/main/default/objects/Account/fields/Member_Admin__c.field-meta.xml
<CustomField>
    <fullName>Member_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>