force-app/main/default/objects/Account/fields/MRM__c.field-meta.xml
<CustomField>
    <fullName>MRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>