force-app/main/default/objects/Account/fields/Onboarding_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date_Stamp__c</fullName>
    <label>Onboarding Date Stamp</label>
    <type>DateTime</type>
</CustomField>