force-app/main/default/objects/Account/fields/Original_Entity_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Original_Entity_Type_Other__c</fullName>
    <label>Original Entity Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>