force-app/main/default/objects/Account/fields/Perm__c.field-meta.xml
<CustomField>
    <fullName>Perm__c</fullName>
    <label>Permanent Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>