force-app/main/default/objects/Account/fields/Pipeline_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Date_Stamp__c</fullName>
    <label>Pipeline Date Stamp</label>
    <type>DateTime</type>
</CustomField>