force-app/main/default/objects/Account/fields/Preparer_Cost__c.field-meta.xml
<CustomField>
    <fullName>Preparer_Cost__c</fullName>
    <label>Preparer Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>