force-app/main/default/objects/Account/fields/Preparer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Preparer_Satisfaction__c</fullName>
    <label>Preparer Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>