force-app/main/default/objects/Account/fields/Previous_Year_Profit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Profit__c</fullName>
    <label>Previous Year Profit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>