force-app/main/default/objects/Account/fields/Pro_License_Details__c.field-meta.xml
<CustomField>
    <fullName>Pro_License_Details__c</fullName>
    <label>Pro License Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>