force-app/main/default/objects/Account/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>Profit</label>
    <length>244</length>
    <type>Text</type>
</CustomField>