force-app/main/default/objects/Account/fields/Prospect_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Date_Stamp__c</fullName>
    <label>Prospect Date Stamp</label>
    <type>DateTime</type>
</CustomField>