force-app/main/default/objects/Account/fields/Questionnaire_Details__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Details__c</fullName>
    <formula>&quot;Name: &quot; &amp; Name +BR()+
&quot;Entity: &quot; &amp; Original_Entity_Type__c  +BR()+
&quot;Phone #: &quot; &amp; Phone  +BR()+
&quot;Email: &quot; &amp; Email__c+BR()+ 
&quot;State: &quot; &amp; State_of_Business__c+BR()+
&quot;Job Title: &quot; + Job_Title__c +BR()+
&quot;Profit: &quot; &amp; Profit__c +BR()+
&quot;Prev. Year Profit: &quot; &amp; Previous_Year_Profit__c + BR() + 
&quot;Pro License: &quot;&amp; Pro_License_Required__c &amp; &quot; &quot; &amp; Pro_License_Details__c +BR()+
&quot;Services: &quot; &amp; Services__c + Service_Type_Other__c +BR()+
&quot;Tangible Goods: &quot; &amp; Tangible_Goods__c +BR()+
&quot;BK Tool: &quot;&amp; Current_Bookkeeping_Software__c +BR()+ 
&quot;Tax Calculator ID: &quot; &amp; Tax_Calculator_ID__c +BR()+
&quot;Lead Discount Code: &quot; &amp; Tax_Calc_Discount_Code__c +BR()+
Foreign_Assets__c</formula>
    <inlineHelpText>Values from Tax Calc / Questionnaire</inlineHelpText>
    <label>Questionnaire Details</label>
    <type>Text</type>
</CustomField>