force-app/main/default/objects/Account/fields/Random__c.field-meta.xml
<CustomField>
    <fullName>Random__c</fullName>
    <formula>SECOND(TIMENOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Random</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>