force-app/main/default/objects/Account/fields/Registered_Agent__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agent__c</fullName>
    <label>Registered Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSC</fullName>
            </value>
            <value>
                <fullName>FICOSO</fullName>
            </value>
            <value>
                <fullName>RASI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other - Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>