force-app/main/default/objects/Account/fields/Resident_of_Same_State__c.field-meta.xml
<CustomField>
    <fullName>Resident_of_Same_State__c</fullName>
    <label>Resident of Same State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>