force-app/main/default/objects/Account/fields/Resident_of_US__c.field-meta.xml
<CustomField>
    <fullName>Resident_of_US__c</fullName>
    <label>Resident of US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>