force-app/main/default/objects/Account/fields/Retroactive_Election__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Election__c</fullName>
    <label>Retroactive Election</label>
    <length>50</length>
    <type>Text</type>
</CustomField>