force-app/main/default/objects/Account/fields/S_Corp_election_date__c.field-meta.xml
<CustomField>
    <fullName>S_Corp_election_date__c</fullName>
    <label>S Corp Election Date</label>
    <type>Date</type>
</CustomField>