force-app/main/default/objects/Account/fields/Service_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Other__c</fullName>
    <label>Service Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>