force-app/main/default/objects/Account/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>