force-app/main/default/objects/Account/fields/Special_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Special_License_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special License Required?</label>
    <type>Checkbox</type>
</CustomField>