force-app/main/default/objects/Account/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <label>State of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>