force-app/main/default/objects/Account/fields/State_of_Operations__c.field-meta.xml
<CustomField>
    <fullName>State_of_Operations__c</fullName>
    <label>State of Operations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>