force-app/main/default/objects/Account/fields/State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence__c</fullName>
    <label>State of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>