force-app/main/default/objects/Account/fields/Tangible_Goods__c.field-meta.xml
<CustomField>
    <fullName>Tangible_Goods__c</fullName>
    <label>Tangible Goods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>