force-app/main/default/objects/Account/fields/Tax_Calc_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calc_Discount_Code__c</fullName>
    <label>Tax Calculator Discount Code</label>
    <length>244</length>
    <type>Text</type>
</CustomField>