force-app/main/default/objects/Account/fields/Tax_Calculator_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculator_ID__c</fullName>
    <label>Tax Calculator ID</label>
    <length>244</length>
    <type>Text</type>
</CustomField>