force-app/main/default/objects/Account/fields/Tax_Manager__c.field-meta.xml
<CustomField>
    <fullName>Tax_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>