force-app/main/default/objects/Account/fields/Taxation__c.field-meta.xml
<CustomField>
    <fullName>Taxation__c</fullName>
    <label>Taxation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>S Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>