force-app/main/default/objects/Account/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <formula>Primary_Contact__r.Twitter__c</formula>
    <label>Twitter</label>
    <type>Text</type>
</CustomField>