force-app/main/default/objects/Account/fields/Ultra_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Ultra_Tax_ID__c</fullName>
    <formula>RIGHT( CaseSafe_ID__c ,9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultra Tax ID</label>
    <type>Text</type>
</CustomField>