force-app/main/default/objects/Account/fields/X2019_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2019_Revenue__c</fullName>
    <label>2019 Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>