force-app/main/default/objects/Account/fields/X2020_Expenses__c.field-meta.xml
<CustomField>
    <fullName>X2020_Expenses__c</fullName>
    <label>2020 Expenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>