force-app/main/default/objects/Account/fields/X2020_Profit__c.field-meta.xml
<CustomField>
    <fullName>X2020_Profit__c</fullName>
    <formula>VALUE(X2020_Revenue__c) - VALUE(X2020_Expenses__c)</formula>
    <label>2020 Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>