force-app/main/default/objects/Account/fields/X2021_Expenses__c.field-meta.xml
<CustomField>
    <fullName>X2021_Expenses__c</fullName>
    <label>2021 Expenses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>