force-app/main/default/objects/Account/fields/X2021_Profit__c.field-meta.xml
<CustomField>
    <fullName>X2021_Profit__c</fullName>
    <label>2021 Profit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>