force-app/main/default/objects/Account/listViews/Accounts_to_Sync_With_Front.listView-meta.xml
<ListView>
    <fullName>Accounts_to_Sync_With_Front</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Prospect,Pipeline</value>
    </filters>
    <label>Accounts to Sync With Front</label>
</ListView>