force-app/main/default/objects/Account/listViews/All_Accounts_by_Status.listView-meta.xml
<ListView>
    <fullName>All_Accounts_by_Status</fullName>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Prospect,Onboarding,Offboarding,Churned,Disqualified</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
    </filters>
    <label>All Accounts by Status</label>
</ListView>