force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Formation__c</columns>
    <columns>Original_Entity_Type__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Member_Ops__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Tax_Advisor__c</columns>
    <columns>Tax_Manager__c</columns>
    <columns>MRM__c</columns>
    <columns>Member_Admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MRM__c</field>
        <operation>contains</operation>
        <value>Tyrone</value>
    </filters>
    <label>All Accounts</label>
</ListView>